fix dialog window scrollbar

--- a/src/widgets/main/Dialog/index.module.css
+++ b/src/widgets/main/Dialog/index.module.css
@@ -4,8 +4,14 @@
   border-radius: 10px;
   flex-direction: column;
   width: fit-content;
-  overflow: auto;
+  overflow: hidden;
   position: relative;
+  padding: 0 !important;
+}
+
+.dop__wrap {
+  overflow: auto;
+  padding: 10px;
 }
 
 .header {
